docs(_code.scss): ensure code wraps correctly
Closes #726

--- a/public/resources/css/module/_code.scss
+++ b/public/resources/css/module/_code.scss
@@ -23,6 +23,7 @@
 */
 
 .prettyprint {
+  white-space: pre-wrap;
   background: $lightgrey;
   font-family: $mono-font;
   color: $darkgrey;
